# autoangel-rs

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench-pr.yml  bench.yml  build.yml  check_docs.yml  publish.yml  update_doc.yml
0.10.0/demo/assets/: elements-rvpKTAPe.css  pck-BGoIpkMy.js  pck-Bt0gNWh7.css  pck-diff-BCx5MpfG.js  useDividerDrag-D1xvFVIT.js
0.10.0/demo/pck-diff/: index.html
0.10.1/demo/: index.html
0.10.1/demo/assets/: SourceLink-CTJqvL4i.js  elements-Tle3EOtX.js  pck-B-VphN7W.css  pck-diff-CjEp2DXj.js  registry-Gli1PeXd.js
0.10.1/demo/elements/: index.html
0.10.1/demo/pck-diff/: index.html
0.10.2/demo/assets/: elements-CVfboVbr.js  pck-diff-CTx9Te1d.js  registry-DdZYcIxp.js  useDividerDrag-D7d5hcMl.js
0.10.2/demo/elements/: index.html
0.10.2/demo/pck/: index.html
0.10.3/demo/assets/: elements-DY_Th7X-.js  elements-DhnZbtd-.css  pck-DRwaS_oG.css  registry-CdMFM6Fn.js
0.10.3/demo/elements/: index.html
0.10.3/demo/pck/: index.html
0.10.3/demo/pck-diff/: index.html
0.11.0/: autoangel.html
0.11.0/demo/assets/: elements-DOAbjsid.js  pck-diff-B8L-ZQXY.js  pck-zA01xlcG.css  registry-DGPTgLM7.js
0.11.0/demo/elements/: index.html
0.11.0/demo/pck/: index.html
0.11.0/demo/pck-diff/: index.html
0.12.0/: autoangel.html
0.12.0/demo/assets/: pck-mQLMBoR7.js  registry-BTQmqDrk.js  registry-t8c_bbJn.css  useDividerDrag-20iafKe5.js
0.12.0/demo/pck/: index.html
0.12.1/: autoangel.html
0.12.1/demo/assets/: DropZone-qUb7cSMh.js  SourceLink-DwvSX9nG.js  (+4 more)
0.13.0/: autoangel.html
0.8.0/viewer/: app.js
0.8.2/demo/: index.html
0.8.3/: autoangel.html
0.8.3/demo/: pck-common.js
0.8.4/: autoangel.html
0.8.5/demo/: nav.css
0.8.7/: autoangel.html
0.8.7/demo/: pck-common.js
0.8.8/: autoangel.html
0.8.8/demo/: cdn.js
0.8.9/demo/: cdn.js
autoangel-core/: Cargo.toml
autoangel-core/benches/: alloc_measurement.rs  elements.rs  elements_helpers.rs  elements_mem.rs  pck.rs  pck_mem.rs
autoangel-core/src/: lib.rs
autoangel-core/src/elements/: config.rs  data.rs  meta.rs  mod.rs  util.rs  value.rs
autoangel-core/src/elements/game/: mod.rs  pw.rs
autoangel-core/src/model/: bmd.rs  bon.rs  common.rs  ecm.rs  gfx.rs  mod.rs  ski.rs  smd.rs  stck.rs  text_reader.rs
autoangel-core/src/model/gfx/: keypoint.rs  mod.rs
autoangel-core/src/pck/: builder.rs  mod.rs  package.rs
autoangel-core/src/util/: data_source.rs  line_reader.rs  mod.rs  throttle.rs
autoangel-py/: Cargo.toml  README.md  autoangel.pyi  pyproject.toml  stubtest_allowlist.txt
autoangel-py/src/: lib.rs
autoangel-py/src/elements/: mod.rs  py_config.rs  py_data.rs  py_util.rs  py_value.rs
autoangel-py/src/model/: mod.rs  py_animation.rs  py_ecm.rs  py_gfx.rs  py_skeleton.rs  py_skin.rs  py_smd.rs  py_track_set.rs
autoangel-py/src/pck/: mod.rs  py_builder.rs  py_package.rs  py_package_config.rs
autoangel-py/src/util/: mod.rs
autoangel-py/tests/: conftest.py  gfx_golden_walker.py  test_bon_embedded_animation.py  test_build.py  test_dump_elements.py  test_dump_packages.py  test_ecm.py  test_error_paths.py  test_gfx_golden.py  test_help.py  test_model.py  test_package_builder.py  test_package_config.py  test_read_configs.py  test_read_elements.py  test_read_package.py  test_save_package.py  test_save_with_config.py  test_symbols.py
autoangel-wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
autoangel-wasm/src/: elements.rs  file_reader.rs  image.rs  lib.rs  model.rs  opfs.rs  pck.rs
autoangel-wasm/tests/: test.mjs  test.ts
demos/: .gitignore  common.css  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.published.json  vite.config.ts
demos/e2e/: ecm-gfx-container.spec.ts  ecm-gfx-decal.spec.ts  ecm-gfx-grid-decal.spec.ts  ecm-gfx-particle.spec.ts  elements-viewer.spec.ts  generate-fixtures.py  gfx-viewer.spec.ts  helpers.ts  model-viewer.spec.ts  navigation.spec.ts  pck-diff.spec.ts  pck-multi-package.spec.ts  pck-refs-panel.spec.ts  pck-viewer.spec.ts
demos/elements/: index.html
demos/pck/: index.html  pck-worker.js
demos/pck-diff/: app.js  index.html  style.css
demos/src/: cdn.ts  wasm.ts
dev/bench/: data.js
docs/: autoangel.html  index.html  rebuild.py  serve.py
docs/html/: autoangel.html
master/: autoangel.html
master/demo/: cdn.js  index.html  pck-common.js  webgl-renderer.js
master/viewer/: index.html
scripts/: assemble_site.py  gfx_survey.py  rebuild_docs.py  serve.py  update_gfx_goldens.py
test_data/elements/: elements_v102.data  elements_v102.data.txt  elements_v12-RU.data.txt  elements_v29.data  elements_v29.data.txt  elements_v33.data.txt  elements_v52.data  elements_v52.data.txt  elements_v60-PWI.data  elements_v60-PWI.data.txt  elements_v60-RU.data.txt  elements_v62.data  elements_v62.data.txt  elements_v63.data.txt  elements_v65.data  elements_v66.data.txt  elements_v67.data.txt  elements_v68.data.txt  elements_v7-RU.data  elements_v7-RU.data.txt  elements_v7.data  elements_v7.data.txt  elements_v70.data  elements_v70.data.txt  elements_v76.data  elements_v77.data.txt  elements_v80.data  elements_v80.data.txt
test_data/gfx/: container_v58.gfx.json  decal_v58.gfx.json  ecmodel_unknown.gfx  ecmodel_unknown.gfx.json  grid_decal_3d.gfx.json  light_v58.gfx.json  lightning_ex.gfx  lightning_ex.gfx.json  lightning_v58.gfx  lightning_v58.gfx.json  ltn_bolt.gfx  ltn_bolt.gfx.json  model_v58.gfx.json  particle_box.gfx.json  particle_cylinder.gfx.json  particle_ellipsoid.gfx.json  particle_point.gfx.json  ring_v58.gfx.json  sound_v58.gfx.json  trail_v58.gfx.json
test_data/models/: stck_v1_animated.stck  stck_v1_static.stck  stck_v2_animated.stck  stck_v2_static.stck
(+1420 files in other folders)
