[package]
name = "autoangel-core"
version = "0.14.0"
authors = ["Smertig <akaraevz@mail.ru>"]
edition = "2024"

[features]
default = ["fs"]
fs = ["dep:memmap2"]
# Enable PyO3 bindings on the GFX `ElementBody` enum (complex
# `#[pyclass]` — each variant becomes a nested Python subclass).
# Consumed by `autoangel-py`.
python = ["dep:pyo3"]
# Enable wasm-bindgen / TypeScript interop on GFX body types via
# `tsify-next` (auto-generates `.d.ts` from the Rust types).
# Consumed by `autoangel-wasm`.
wasm = ["dep:tsify-next", "dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
static_assertions = "1.1"
thiserror = "2.0.18"
subslice = "0.2.3"
miniz_oxide = "0.9.1"
encoding = "0.2.33"
memmap2 = { version = "0.9", optional = true }
endiannezz = "0.6.5"
itertools = "0.14.0"
replace_with = "0.1.8"
smallvec = { version = "1.15.1", features = ["union"] }
include_dir = "0.7.4"
once_cell = "1.21"
im = "15.1.0"
format = "0.2.4"
parking_lot = "0.12.5"
crc32fast = "1.5"
eyre = "0.6.12"
web-time = "1"
color-eyre = "0.6.5"
log = "0.4.29"
pollster = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
macro_rules_attribute = "0.2"
pyo3 = { version = "0.28.2", optional = true, default-features = false, features = ["abi3-py37", "macros"] }
tsify-next = { version = "0.5", optional = true, default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.8.2"
stats_alloc = "0.1"

[[bench]]
name = "pck"
harness = false

[[bench]]
name = "elements"
harness = false

[[bench]]
name = "elements_mem"
harness = false

[[bench]]
name = "pck_mem"
harness = false
