[package]
name = "autoangel-wasm"
version = "0.8.2"
authors = ["Smertig <akaraevz@mail.ru>"]
edition = "2024"
description = "WASM bindings for Angelica Engine game file parsing"
repository = "https://github.com/Smertig/autoangel-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autoangel-core = { path = "../autoangel-core", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
eyre = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
]
