[package]
name = "autoangel-wasm"
version = "0.10.3"
authors = ["Smertig <akaraevz@mail.ru>"]
edition = "2024"
description = "WASM bindings for Angelica Engine game file parsing"
repository = "https://github.com/Smertig/autoangel-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autoangel-core = { path = "../autoangel-core", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pollster = "0.4"
js-sys = "0.3"
eyre = "0.6"
console_error_panic_hook = "0.1"
dds = { version = "0.2", default-features = false }
image = { version = "0.25", default-features = false, features = ["tga"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "File",
    "Blob",
]
